--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,7 @@
             font-size: 30px;
         }
         body {
-                background-color: lightblue;
+                background-color: red;
         }
 Hasta aquí el CSS usado en la web dos, de aqui en adelante a la web tres
 
