--- a/estilo.css
+++ b/estilo.css
@@ -29,6 +29,13 @@ Hasta aquí el CSS usado en la web dos, de aqui en adelante a la web tres
                 width: 60%;
                 height: 40px;
              }
+    button {
+        padding: 10px 20px;
+        margin: 10px;
+        font-size: 16px;
+
+    }
+        
 
    
 </style>
