--- a/estilo.css
+++ b/estilo.css
@@ -3,7 +3,7 @@
             color: rgb(100, 35, 230);
         }  
         #parrafo-azul {
-            background-color: red;
+            background-color: blue;
         }
         
         #parrafo-gris {
